enhance error response